Fix text color handling of disabled offer in dark mode

--- a/desktop/src/main/java/bisq/desktop/theme-dark.css
+++ b/desktop/src/main/java/bisq/desktop/theme-dark.css
@@ -76,7 +76,6 @@
     -bs-rd-nav-deselected: rgba(255, 255, 255, 0.45);
     -bs-rd-nav-button-hover: rgba(255, 255, 255, 0.03);
 
-    -bs-tab-content-area: #111;
     -bs-content-pane-bg-top: #212121;
     -bs-rd-tab-border: rgba(255, 255, 255, 0.00);
     -bs-tab-content-label-hover: rgba(0, 0, 0, 0.03);
@@ -528,14 +527,18 @@
     -fx-background-color: -bs-color-primary-dark;
 }
 
-.jfx-date-picker .date-picker-popup{
+.jfx-date-picker .date-picker-popup {
     -fx-background-color: -bs-color-gray-background;
 }
 
-.jfx-date-picker .left-button, .jfx-date-picker .right-button{
+.jfx-date-picker .left-button, .jfx-date-picker .right-button {
     -fx-background-color: derive(-bs-color-gray-0, -10%);
 }
 
 .progress-bar > .secondary-bar {
     -fx-background-color: -bs-color-gray-0;
+}
+
+.offer-disabled .label {
+    -bs-text-color: -bs-color-gray-bbb;
 }
